<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user">User</string>
    <string name="heart">Heart</string>
    <string name="plus">Plus</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="upcoming">UpComing</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Audio">audio</string>
    <string name="Mic">mic</string>
    <string name="Reading">writing</string>
    <string name="Writing">writing</string>
    <string name="Speaking">speaking</string>
    <string name="privacy">Privacy</string>
    <string name="rate_us">Rate Us</string>
    <string name="welcome_to_privacy_policy">Welcome To Privacy Policy</string>
</resources>