<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_heart"
            android:icon="@drawable/heart"
            android:title="@string/heart" />
        <item
            android:id="@+id/nav_plus"
            android:icon="@drawable/bhaskar"
            android:title="@string/plus" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/htimes"
            android:title="@string/search" />
        <item
        android:id="@+id/nav_send"
        android:icon="@drawable/jagran"
        android:title="@string/send" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/google"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/comment"
            android:title="@string/comment" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/user" />

    </group>

   <item android:title="@string/upcoming">
       <menu>
           <item android:id="@+id/Videos"
               android:title="@string/videos"/>
           <item android:id="@+id/Images"
               android:title="@string/images"/>
           <item android:id="@+id/Audio"
               android:title="@string/Audio"/>
           <item android:id="@+id/Mic"
               android:title="@string/Mic"/>
           <item android:id="@+id/Reading"
               android:title="@string/Reading"/>
           <item android:id="@+id/Writing"
               android:title="@string/Writing"/>
           <item android:id="@+id/Speaking"
               android:title="@string/Speaking"/>
       </menu>

   </item>
</menu>