<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saqib.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.saqib.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.saqib.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_comment"
        android:name="com.saqib.navigationdrawer.Fragements.Comment"
        android:label="Comment"
        tools:layout="@layout/fragment_comment" />
    <fragment
        android:id="@+id/nav_heart"
        android:name="com.saqib.navigationdrawer.Fragements.Heart"
        android:label="Heart"
        tools:layout="@layout/fragment_heart" />
    <fragment
        android:id="@+id/nav_plus"
        android:name="com.saqib.navigationdrawer.Fragements.plus"
        android:label="Plus"
        tools:layout="@layout/fragment_plus" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.saqib.navigationdrawer.Fragements.Search"
        android:label="Search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_send"
        android:name="com.saqib.navigationdrawer.Fragements.Send"
        android:label="Send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.saqib.navigationdrawer.Fragements.User"
        android:label="User"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.saqib.navigationdrawer.Fragements.Share"
        android:label="Share"
        tools:layout="@layout/fragment_share" />
</navigation>